--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,5 @@
 body{
-  background-color: white;
+  background: url(http://digital.bnint.com/filelib/s9/photos/white_wood_4500x3000_lo_res.jpg);
 
 }
 
@@ -8,12 +8,15 @@ header{
 }
 
 h1{
-    font-size: 30px;
+    font-size: 48px;
 
 }
 
+p{
+  font-size: 24px;
+}
+
 .main{
-	font-size: 24px;
 	font-family: verdana;
 	color: black;
 	text-align: center;
@@ -105,6 +108,14 @@ h1{
    	width: 100%;
    	height: 250px;
    }
+
+   .card {
+    box-shadow: 5px  5px 5px grey;
+   }
+
+   .card:hover {
+    transform: scale(1.5);
+   }
     
    
    .boxes {
@@ -142,7 +153,7 @@ html {
 }
 
 body {
-  font: 1em/1.4 Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font: 1em/1.4 Roboto, "Helvetica Neue", Helvetica, Arial, sans-serif, white;
   background-color: #fafafa;
 }
 
