--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,7 +1,7 @@
 html, body {
     margin: 0px;
     padding: 0px;
-    background: url("http://digital.bnint.com/filelib/s9/photos/white_wood_4500x3000_lo_res.jpg");
+    background-color: black;
 }
 
 .carousel {
