--- a/foundation-6/css/foundation.css
+++ b/foundation-6/css/foundation.css
@@ -17,7 +17,10 @@ html {
   -webkit-text-size-adjust: 100%; }
 
 body {
-  margin: 0; }
+  margin: 0; 
+  background-color: black;
+}
+
 
 h1 {
   font-size: 2em;
