--- a/css/carousel.css
+++ b/css/carousel.css
@@ -7,7 +7,7 @@ html, body {
 .carousel {
     position: relative;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
-    margin-top: 26px;
+    margin: 26px;
 }
 
 .carousel-inner {
