--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,13 +1,15 @@
 html, body {
     margin: 0px;
     padding: 0px;
-    background-color: black;
 }
 
 .carousel {
     position: relative;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
     margin: 26px;
+    
+    width: 45%;
+    text-align: center;
 }
 
 .carousel-inner {
