--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,8 @@
 body{
-  background: url(https://media1.giphy.com/media/Ph0oIVQeuvh0k/giphy.gif?cid=3640f6095c92b2f75578306c32d0e4e3);
+  background-image: url("images/grid_pic copy.jpg");
+  /*background: url(https://media1.giphy.com/media/Ph0oIVQeuvh0k/giphy.gif?cid=3640f6095c92b2f75578306c32d0e4e3);*/
+  background-size: cover;
+  background-repeat: none;
   
   margin: 0;
 }
@@ -27,4 +30,9 @@ p{
 	color: white;
 	text-align: center;
 	margin: 10px;
+}
+
+.nav{
+  height: 20%;
+  width: 10%;
 }
