--- a/css/index.css
+++ b/css/index.css
@@ -26,13 +26,16 @@ p{
 
 .main{
   background-color: black;
-	font-family: verdana;
-	color: white;
-	text-align: center;
-	margin: 10px;
+  font-family: verdana;
+  color: white;
+  text-align: center;
+  margin: 10px;
 }
 
 .nav{
   height: 20%;
   width: 10%;
+  position: absolute;
+  top: 25%;
+  right: 15%;
 }
