--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,9 @@
 body{
-  background-color: black;
+  background-image: url("images/grid_pic copy.jpg");
+  /*background: url(https://media1.giphy.com/media/Ph0oIVQeuvh0k/giphy.gif?cid=3640f6095c92b2f75578306c32d0e4e3);*/
+  background-size: cover;
+  background-repeat: none;
+  
   margin: 0;
 }
 
@@ -23,11 +27,10 @@ p{
 /*foundation.css for img & a*/
 
 .main{
-  background-color: black;
 	font-family: verdana;
 	color: white;
 	text-align: center;
-	margin: 10px;
+	margin: 15px;
 }
 
 /* Navbar container */
@@ -199,5 +202,10 @@ label{
   height: 25%;
   width: 50%;
   float: left;
+  margin: 5px;
 
+}
+
+.about{
+  text-align: right;
 }
