--- a/css/carousel.css
+++ b/css/carousel.css
@@ -1,15 +1,13 @@
-html, body {
-    margin: 0px;
-    padding: 0px;
-}
 
 .carousel {
     position: relative;
     box-shadow: 0px 1px 6px rgba(0, 0, 0, 0.64);
     margin: 26px;
-    
-    width: 45%;
+    width: 80%;
     text-align: center;
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
 }
 
 .carousel-inner {
@@ -71,7 +69,9 @@ html, body {
 
 #carousel-1:checked ~ .control-1,
 #carousel-2:checked ~ .control-2,
-#carousel-3:checked ~ .control-3 {
+#carousel-3:checked ~ .control-3,
+#carousel-4:checked ~ .control-4,
+#carousel-5:checked ~ .control-5 {
     display: block;
 }
 
@@ -105,13 +105,15 @@ html, body {
 
 #carousel-1:checked ~ .control-1 ~ .carousel-indicators li:nth-child(1) .carousel-bullet,
 #carousel-2:checked ~ .control-2 ~ .carousel-indicators li:nth-child(2) .carousel-bullet,
-#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet {
+#carousel-3:checked ~ .control-3 ~ .carousel-indicators li:nth-child(3) .carousel-bullet,
+#carousel-4:checked ~ .control-4 ~ .carousel-indicators li:nth-child(4) .carousel-bullet,
+#carousel-5:checked ~ .control-5 ~ .carousel-indicators li:nth-child(5) .carousel-bullet {
     color: #428bca;
 }
 
 #title {
     width: 100%;
-    position: absolute;
+    position: center;
     padding: 0px;
     margin: 0px auto;
     text-align: center;
