--- a/css/custom.css
+++ b/css/custom.css
@@ -107,7 +107,8 @@ p{
  /*Home*/
  
  .name{
-  margin: 3em;
+  border: 10px;
+  text-align: center;
  }
  
  /*Photo*/
@@ -136,32 +137,41 @@ p{
 
 /*contact*/
 
-img {
-  max-width: 100%;
-  display: block;
+input[type=text], select, textarea {
+  width: 100%;
+  padding: 15px; 
+  border: 1px solid #ccc;
+  border-radius: 4px; 
+  box-sizing: border-box; 
+  margin-top: 6px;
+  margin-bottom: 16px; 
+  resize: vertical 
 }
 
-label{
-  color: white;
+/* Style the submit button with a specific background color etc */
+input[type=submit] {
+  background-color: #a410b7;
+  color:  white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-.boxes {
-  margin: 0 auto;
-  max-width: 1200px;
+/* When moving the mouse over the submit button, add a darker green color */
+input[type=submit]:hover {
+  background-color: #c623db;
 }
 
-.box:nth-child(odd) {
-  background-color: #233F78;
-}
-
-.box {
-  background-color: #707B96;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .14), 0 3px 1px -2px rgba(0, 0, 0, .2), 0 1px 5px 0 rgba(0, 0, 0, .12);
-}
-
-.contact{
-	text-align: left;
-  color: white;
+/* Add a background color and some padding around the form */
+.container {
+  align-content: center;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  opacity: 50%;
+  padding: 20px;
+  height: 30%;
+  width: 70%;
 }
 
 /*foundation.css for button, .float-left & .float-center*/
@@ -210,3 +220,6 @@ label{
 .about{
   text-align: right;
 }
+
+/*Processing*/
+
