--- a/css/custom.css
+++ b/css/custom.css
@@ -116,8 +116,9 @@ p{
   display: grid;
   grid-gap: 20px;
   /*Grid tracks*/
-  grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fill,minmax(500px, 3fr));
   grid-auto-rows: 250px;
+  margin: 10%;
    }
 
    .cards img {
@@ -132,6 +133,10 @@ p{
 
    .card:hover {
     transform: scale(1.25);
+   }
+
+   .photo-group{
+    
    }
 
 
@@ -158,12 +163,12 @@ input[type=submit] {
   cursor: pointer;
 }
 
-/* When moving the mouse over the submit button, add a darker green color */
+/* When moving the mouse over the submit button, add a darker color */
 input[type=submit]:hover {
   background-color: #c623db;
 }
 
-/* Add a background color and some padding around the form */
+/* Background color and padding around box */
 .container {
   align-content: center;
   border-radius: 5px;
