--- a/art75/no.css
+++ b/art75/no.css
@@ -1,9 +1,9 @@
 body{
-	background-image: url(images/background.jpeg);
-	background-size: cover;
+	background-color: white: 
+/*	background-size: cover;
 	background-repeat: repeat;
 	background-position: center;
-	height: 500px;
+	height: 500px;*/
 
 }
 
@@ -24,18 +24,10 @@ p{
 }
 
 .images{
-	display: grid;
-  grid-gap: 20px;
-  /*Grid tracks*/
-  grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
-  grid-auto-rows: 250px;
-  margin: 10%;
+	display: block;
+	margin-left: 20px;
+	margin-right: 20px;
 	
-}
-
-.images img{
-	 object-fit: cover;
-   	width: 30%;
 }
 
 .hair{
@@ -67,4 +59,13 @@ p{
 	margin: 30px;
 	text-align: center;
 	display: block;
+}
+
+#find{
+	border: none;
+	color: rgba(0,0,0,0);
+	margin: 30px;
+	margin-top: 300px;
+	text-align: right;
+	
 }
