--- a/art75/end.css
+++ b/art75/end.css
@@ -1,5 +1,5 @@
 body{
-	background-image: url(images/background.jpeg);
+	background-image: url(images/space.gif); 
 	background-size: cover;
 	background-repeat: repeat;
 	background-position: center;
@@ -8,7 +8,7 @@ body{
 }
 
 h1{
-	color: black;
+	color: white;
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	font-size: 35px;
 	text-align: center;
@@ -16,26 +16,19 @@ h1{
 }
 
 p{
-	color: black;
+	color: white;
 	font-family: "Comic Sans MS", cursive, sans-serif;
 	font-size: 18px;
 	text-align: center;
+	margin: 30px
 
 }
 
 .images{
-	display: grid;
-  grid-gap: 20px;
-  /*Grid tracks*/
-  grid-template-columns: repeat(auto-fill,minmax(300px, 1fr));
-  grid-auto-rows: 250px;
-  margin: 10%;
+	display: block;
+	margin-left: 20px;
+	margin-right: 20px;
 	
-}
-
-.images img{
-	 object-fit: cover;
-   	width: 30%;
 }
 
 .hair{
@@ -67,4 +60,23 @@ p{
 	margin: 30px;
 	text-align: center;
 	display: block;
+}
+
+#find{
+	border: none;
+	color: rgba(0,0,0,0);
+	margin: 30px;
+	margin-top: 300px;
+	text-align: right;
+	display: grid;
+}
+
+.container {
+  align-content: center;
+  border-radius: 5px;
+  background-color: #002871;
+  opacity: 80%;
+  padding: 20px;
+  height: 30%;
+  width: 96%;
 }
